[package]
name = "kong_rs"
version = "0.1.0"
edition = "2024"
description = "Plugin Development Kit for developing Kong plugins in Rust"
license = "MIT"

[dependencies]
kong_rs_protos = { version = "0.1.0", path = "../kong_rs_protos" }
kong_rs_macros = { version = "0.1.0", path = "../kong_rs_macros" }
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["net", "sync", "rt"] }
serde = "1.0.219"
http = "1.3.1"
prost = "0.13.5"
anyhow = "1.0.98"
prost-types = "0.13.5"
strum = { version = "0.27.1", features = ["derive"] }
serde_json = "1.0.140"
