[package]
name = "kong_rs_protos"
version = "0.1.0"
edition = "2024"
description = "Protobuf bindings for the Kong Plugin Server"
license = "MIT"

[dependencies]
bytes = "1.10.1"
prost = "0.13.5"
prost-types = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
prost-build = "0.13.5"
